--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>My second github repo</title>
 </head>
 <body>
-    
+    <h1>I can push to github</h1>
+    <h2>mama i can code now</h2>
+    <h3>new code change</h3>
+    <h4>kamon asen sobai</h4>
 </body>
 </html>
