--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>I can push to github</h1>
+    <h1>I can push to github.com</h1>
     <h2>mama i can code now</h2>
     <h3>new code changed to orange</h3>
     <h4>kamon asen sobai</h4>
     <p> more paragraph</p>
     <p>i am coding coding and coding</p>
+    <img src="MRK29.jpg" alt="">
+    <img src="MRK16.jpg" alt="">
 </body>
 </html>
