--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h3>new code changed to orange</h3>
     <h4>kamon asen sobai</h4>
     <p> more paragraph</p>
-    <p>i am coding coding and coding</p>
+    <p>i am coding coding and coding you can join me.</p>
     <img src="image/MRK13.jpg" alt="">
     <img src="MRK29.jpg" alt="">
     <img src="MRK16.jpg" alt="">
